[package]
name = "orbit"
license = "MIT"
edition = "2021"
version = "0.1.0"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
axum = "0.7.5"
anyhow = "1.0.71"
serde = "1.0.165"
dotenvy = "0.15.7"
tracing = "0.1.37"
schemars = "0.8.12"
thiserror = "1.0.40"
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
aide = { version = "0.13.4", features = ["axum", "scalar"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
chrono = "0.4.26"
