[package]
version = "0.1.0"
name = "orbit-client"
edition.workspace = true
authors.workspace = true

[dependencies]
url = "2.5.2"
futures = "0.3.30"
reqwest = "0.12.5"
thiserror = "1.0.63"
serde_json = "1.0.120"
async-fn-stream = "0.2.2"
reqwest-eventsource = "0.6.0"
orbit-core = { version = "0.1.0", path = "../orbit-core" }
