[package]
version = "0.1.0"
name = "orbit-cli"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
url = "2.5.2"
futures-util = "0.3.30"
tokio = { version = "1.38.1", features = ["full"] }
orbit-types = { version = "0.1.0", path = "../types" }
orbit-client = { version = "0.1.0", path = "../client" }
clap = { version = "4.5.9", features = ["derive", "env"] }
