[package]
version = "0.1.0"
name = "orbit-server"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = "0.7.5"
http = "1.1.0"
tar = "0.4.41"
slug = "0.1.5"
toml = "0.8.15"
anyhow = "1.0.71"
serde = "1.0.165"
flate2 = "1.0.30"
indexmap = "2.2.6"
dotenvy = "0.15.7"
tracing = "0.1.37"
reqwest = "0.12.5"
schemars = "0.8.12"
thiserror = "1.0.63"
serde_json = "1.0.99"
futures-util = "0.3.30"
async-fn-stream = "0.2.2"
uuid = { version = "1.10.0", features = ["v7"] }
tokio = { version = "1.29.1", features = ["full"] }
orbit-types = { version = "0.1.0", path = "../types" }
aide = { version = "0.13.4", features = ["axum", "scalar"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
chrono = "0.4.26"
