[package]
version = "0.1.0"
name = "orbit-types"
description = "Shared types for Orbit."


readme.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
